[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/scenes/board/board.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/custom_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/settings/SettingsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/styles/styleboxempty.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/fonts/roboto_r_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/scenes/game/game_scene.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/settings.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.0901961, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.780392, 0.780392, 0.780392, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.588235 )
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="Animation" id=5]
resource_name = "show_settings"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsScreen:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 420 ), Vector2( 0, 0 ) ]
}

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 332.0
margin_bottom = 406.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameView" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 4.0
margin_right = 324.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBoard" type="Panel" parent="MarginContainer/VBoxContainer/GameView"]
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Board" parent="MarginContainer/VBoxContainer/GameView" instance=ExtResource( 1 )]
margin_right = 320.0
margin_bottom = 320.0

[node name="BoardBorder" type="Panel" parent="MarginContainer/VBoxContainer/GameView"]
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="StartOverlay" type="Panel" parent="MarginContainer/VBoxContainer/GameView"]
visible = false
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="TextOverlay" type="Label" parent="MarginContainer/VBoxContainer/GameView/StartOverlay"]
margin_right = 328.0
margin_bottom = 319.0
text = "Click to start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 328.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsView" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 328.0
margin_bottom = 384.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsView"]
margin_left = 8.0
margin_right = 320.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_right = 8.0
margin_bottom = 52.0
custom_styles/separator = ExtResource( 4 )
custom_constants/separation = 8

[node name="Time" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 12.0
margin_right = 77.0
margin_bottom = 52.0

[node name="TimeTitle" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Time"]
margin_right = 65.0
margin_bottom = 24.0
text = "Time"
align = 1
valign = 1

[node name="TimeValue" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Time"]
margin_top = 28.0
margin_right = 65.0
margin_bottom = 52.0
rect_min_size = Vector2( 65, 24 )
text = "0s"
align = 1
valign = 2

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 81.0
margin_right = 85.0
margin_bottom = 52.0
custom_styles/separator = ExtResource( 4 )

[node name="Moves" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 89.0
margin_right = 148.0
margin_bottom = 52.0

[node name="MoveText" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Moves"]
margin_right = 59.0
margin_bottom = 24.0
text = "Moves"
align = 1
valign = 1

[node name="MoveValue" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Moves"]
margin_top = 28.0
margin_right = 59.0
margin_bottom = 52.0
text = "0"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 152.0
margin_right = 176.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 4 )
custom_constants/separation = 16

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 180.0
margin_top = 10.0
margin_right = 242.0
margin_bottom = 42.0
rect_min_size = Vector2( 60, 32 )
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Restart"

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 246.0
margin_right = 271.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 4 )
custom_constants/separation = 16

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 275.0
margin_right = 299.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="VSeparator5" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 303.0
margin_right = 311.0
margin_bottom = 52.0
custom_styles/separator = ExtResource( 4 )
custom_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 328.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsScreen" parent="." instance=ExtResource( 3 )]
margin_top = 420.0
margin_bottom = 420.001

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_settings = SubResource( 5 )

[connection signal="game_started" from="MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_game_started"]
[connection signal="game_won" from="MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_game_won"]
[connection signal="moves_updated" from="MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_moves_updated"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StatsView/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StatsView/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="background_update" from="SettingsScreen" to="." method="_on_SettingsScreen_background_update"]
[connection signal="board_size_update" from="SettingsScreen" to="." method="_on_SettingsScreen_board_size_update"]
[connection signal="hide_settings" from="SettingsScreen" to="." method="_on_SettingsScreen_hide_settings"]
[connection signal="show_numbers_update" from="SettingsScreen" to="." method="_on_SettingsScreen_show_numbers_update"]
